301 Discussing time series evaluation metrics

--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -13,8 +13,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -66,17 +65,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pXzwwRs31NcH",
-        "outputId": "099b542e-fef5-4d68-c4c5-b5693809abf8"
+        "outputId": "1a1908f3-169a-4d72-f9fd-c370fdf1194f"
       },
       "source": [
         "!nvidia-smi -L"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "GPU 0: Tesla T4 (UUID: GPU-be4281a5-53f8-9158-20e7-a4c8d67bf5b0)\n"
+            "NVIDIA-SMI has failed because it couldn't communicate with the NVIDIA driver. Make sure that the latest NVIDIA driver is installed and running.\n",
+            "\n"
           ],
           "name": "stdout"
         }
@@ -89,17 +89,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BJrmbW190k5V",
-        "outputId": "b7b1a9a2-cf48-453c-b2db-d6a026c88b12"
+        "outputId": "b040caeb-12c0-4221-8f54-2e5c3639f393"
       },
       "source": [
         "!wget https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/BTC_USD_2013-10-01_2021-05-18-CoinDesk.csv"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2021-08-17 00:18:48--  https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/BTC_USD_2013-10-01_2021-05-18-CoinDesk.csv\n",
+            "--2021-08-17 00:39:08--  https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/BTC_USD_2013-10-01_2021-05-18-CoinDesk.csv\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -108,7 +108,7 @@
             "\n",
             "BTC_USD_2013-10-01_ 100%[===================>] 174.33K  --.-KB/s    in 0.02s   \n",
             "\n",
-            "2021-08-17 00:18:48 (11.1 MB/s) - ‘BTC_USD_2013-10-01_2021-05-18-CoinDesk.csv’ saved [178509/178509]\n",
+            "2021-08-17 00:39:08 (7.11 MB/s) - ‘BTC_USD_2013-10-01_2021-05-18-CoinDesk.csv’ saved [178509/178509]\n",
             "\n"
           ],
           "name": "stdout"
@@ -132,7 +132,7 @@
           "height": 235
         },
         "id": "nfT8dF9j1XEE",
-        "outputId": "c9229d38-83a6-4ed5-cf93-71de0f3f9aef"
+        "outputId": "142ab13b-55b9-413f-e9c8-b5161a948cb2"
       },
       "source": [
         "# Import with pandas\n",
@@ -143,7 +143,7 @@
         "                 index_col=[\"Date\"]) # parse the date column and tell pandas column 1 is a datetime\n",
         "df.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -242,7 +242,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -253,12 +253,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vhvyZjLs2SqM",
-        "outputId": "8218ce47-dff8-481e-8d94-5e97c4a4e404"
+        "outputId": "c98c1ead-b7c0-4787-f0d2-6d476684f2e9"
       },
       "source": [
         "df.info()"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,13 +287,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3Idb-62L2W5e",
-        "outputId": "c023208a-8aa5-4909-c41b-345f7a1dd60e"
+        "outputId": "dbb1e792-49ad-4f88-e87b-3eef54ed8d5a"
       },
       "source": [
         "# How many samples do we have ?\n",
         "len(df)"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -305,7 +305,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -317,12 +317,12 @@
           "height": 235
         },
         "id": "zkGYWQXQ4jZw",
-        "outputId": "2d7ff6c3-fb69-49cb-ad55-1072c5c3724f"
+        "outputId": "72df0c33-2594-4fdb-f8bf-9aa640bd09e6"
       },
       "source": [
         "df.tail()"
       ],
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -421,7 +421,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -448,14 +448,14 @@
           "height": 235
         },
         "id": "PxlCEtuU4lHq",
-        "outputId": "2201aa4a-7938-4b18-d173-b219b98575a1"
+        "outputId": "5a6b5dfc-ed52-40fb-bdd9-0c98b752a8cf"
       },
       "source": [
         "# Only want closing price for each day\n",
         "bitcoin_prices = pd.DataFrame(df[\"Closing Price (USD)\"]).rename(columns={\"Closing Price (USD)\" : \"Price\"})\n",
         "bitcoin_prices.head()"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -524,7 +524,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -536,7 +536,7 @@
           "height": 460
         },
         "id": "ClsnM1Pc8dL5",
-        "outputId": "e8f10c09-f7c1-41f4-85a7-f115221e668a"
+        "outputId": "d623311a-79be-44b5-bfc3-0ad28c9e87d6"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -545,7 +545,7 @@
         "plt.title(\"Price of Bitcoin from 1 Oct 2013 to 18 May 2021\", fontsize=16)\n",
         "plt.legend(fontsize=14);"
       ],
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -590,7 +590,7 @@
         "    timesteps.append(datetime.strptime(line[1], \"%Y-%m-%d\")) # get the dates as dates (not string)\n",
         "    btc_price.append(float(line[2])) # Get closing price as float"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -600,12 +600,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HdfX5d1i_A_O",
-        "outputId": "8e06b88a-d715-48a1-cdbe-e66364e68fe1"
+        "outputId": "a03b760e-dc1b-45ee-8dc5-c077d3bff26b"
       },
       "source": [
         "timesteps [:10], btc_price[:10]"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -636,7 +636,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 10
         }
       ]
     },
@@ -648,7 +648,7 @@
           "height": 460
         },
         "id": "Tukv4MdN_qKY",
-        "outputId": "4e10e912-b6d7-4a76-cfd3-02c4eb342670"
+        "outputId": "b459468b-223a-415b-ab54-de7816356e30"
       },
       "source": [
         "# Plot from CSV\n",
@@ -661,7 +661,7 @@
         "plt.xlabel(\"Date\");\n",
         "#plt.legend(fontsize=14);"
       ],
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -703,7 +703,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jSxeZ1BWAnDv",
-        "outputId": "4bc834b2-119a-472f-9f02-a889791f23bb"
+        "outputId": "92b67cb9-d890-47e6-a7a5-62f5f16f67b2"
       },
       "source": [
         "# Get bitcoin date array\n",
@@ -712,7 +712,7 @@
         "\n",
         "timesteps[:10], prices[:10]"
       ],
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -731,7 +731,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 12
         }
       ]
     },
@@ -742,7 +742,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_IKBhVucBF19",
-        "outputId": "b0364120-9d8b-4983-fffc-bafce04ec128"
+        "outputId": "e7d4d58d-f77d-48e3-8108-5f99921f4f7d"
       },
       "source": [
         "# Wrong way to make train/test sets for time series data\n",
@@ -755,7 +755,7 @@
         "\n",
         "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
       ],
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -767,7 +767,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 13
         }
       ]
     },
@@ -779,7 +779,7 @@
           "height": 442
         },
         "id": "H6eV_KkACSdS",
-        "outputId": "28f61e90-2a32-478b-c110-c895cb896ae3"
+        "outputId": "18085c44-7c62-443e-f614-0561740f482d"
       },
       "source": [
         "# Let's plot wrong train and test split\n",
@@ -791,7 +791,7 @@
         "plt.legend(fontsize=14)\n",
         "plt.show();"
       ],
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -824,7 +824,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KrpLNsHFDo_7",
-        "outputId": "50107ed0-1d67-4ec2-9777-906e80922d6b"
+        "outputId": "3fd6b9a2-a294-4b52-f8c9-4b7d22356c8e"
       },
       "source": [
         "# Right way to create train/test sets for time series data\n",
@@ -838,7 +838,7 @@
         "\n",
         "len(X_train), len(X_test), len(y_train), len(y_test)"
       ],
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -850,7 +850,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 15
         }
       ]
     },
@@ -862,7 +862,7 @@
           "height": 442
         },
         "id": "IaC_9SuTFH7Q",
-        "outputId": "251d8d69-be01-4529-a25b-e105a21fb07d"
+        "outputId": "fe120d3f-c7e0-4819-d5e4-09fbdb944b98"
       },
       "source": [
         "# Plot correctly made train and test data\n",
@@ -874,7 +874,7 @@
         "plt.legend(fontsize=14)\n",
         "plt.show();"
       ],
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -932,7 +932,7 @@
         "  plt.grid(True)\n",
         "\n"
       ],
-      "execution_count": 18,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -943,7 +943,7 @@
           "height": 442
         },
         "id": "NO76SdYLKVIU",
-        "outputId": "6fa39708-d71b-4433-d35e-c8f0cbfac802"
+        "outputId": "664cda14-12f1-4db1-f0af-0499302462ad"
       },
       "source": [
         "# Test our plotting function\n",
@@ -951,7 +951,7 @@
         "plot_time_series(timesteps = X_train, values=y_train, label=\"Train data\")\n",
         "plot_time_series(timesteps=X_test, values=y_test, label=\"Test data\")"
       ],
-      "execution_count": 19,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1020,12 +1020,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0e0b08af-8579-44ba-a4d9-a0206d92ec2a"
+        "outputId": "65cbe9e4-fccc-4bdb-81da-681f806c0608"
       },
       "source": [
         "y_test[:10]"
       ],
-      "execution_count": 20,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1039,7 +1039,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 19
         }
       ]
     },
@@ -1050,7 +1050,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e6c4b3f2-b8ad-4b73-ac9b-f9b1417e5f5b"
+        "outputId": "baf0dc8c-18db-4770-8b44-f747309e1ac5"
       },
       "source": [
         "# Create a naive forecast\n",
@@ -1058,7 +1058,7 @@
         "\n",
         "naive_forecast[:10], naive_forecast[-10:]"
       ],
-      "execution_count": 21,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1075,7 +1075,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 20
         }
       ]
     },
@@ -1086,12 +1086,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4780b3cc-4d9a-4a3a-f765-3de3f93bc623"
+        "outputId": "df543b0b-5daa-42ae-819e-3686117f9fce"
       },
       "source": [
         "len(y_test), len(naive_forecast), y_test[-10:], naive_forecast[-10:]"
       ],
-      "execution_count": 24,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1110,7 +1110,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 21
         }
       ]
     },
@@ -1122,7 +1122,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 442
         },
-        "outputId": "7831740e-5ea4-4aae-bf90-2fd78666adf9"
+        "outputId": "96c9f8bb-b7e9-4c9b-86b2-6e8cf99f3a7b"
       },
       "source": [
         "plt.figure(figsize=(10, 7))\n",
@@ -1131,7 +1131,7 @@
         "plot_time_series(timesteps=X_test, values=y_test, start=350, format=\"-\", label=\"Test data\")\n",
         "plot_time_series(timesteps=X_test[1:], values=naive_forecast, start=350, format=\"-\", label=\"Naive Forecast\")"
       ],
-      "execution_count": 28,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1159,14 +1159,37 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "pIM1BBhmgJJh"
       },
       "source": [
+        "## Evaluating a time series model\n",
+        "\n",
+        "Let's look into some evaluation metrics for time series forecasting.\n",
+        "\n",
+        "What are we doing?\n",
+        "\n",
+        "We're predicting a number, so that means we have a form of a regression problem.\n",
+        "\n",
+        "Because we're working on a regression problem, we'll need some regression-like metrics.\n",
+        "\n",
+        "A few common regression metrics (which can also be used for time series forecasting) :\n",
+        "* MAE - mean absolute error\n",
+        "* MSE - mean squared error\n",
+        "\n",
+        "The main thing we're evaluating here is : **how do our model's forecast(y_pred) compare against the actual values(y_true or ground truth values) ?**\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n8fVqrQjhym7"
+      },
+      "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     }
   ]
