302. Implementing MASE with TensorFlow

--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -1177,8 +1177,16 @@
         "A few common regression metrics (which can also be used for time series forecasting) :\n",
         "* MAE - mean absolute error\n",
         "* MSE - mean squared error\n",
+        "* RMSE - root mean square error\n",
+        "* MAPE/sMAPE - (symmetric) mean absolute percentage error\n",
+        "* MASE - mean absolute scaled error\n",
         "\n",
-        "The main thing we're evaluating here is : **how do our model's forecast(y_pred) compare against the actual values(y_true or ground truth values) ?**\n"
+        "For all of the above metrics , **lower is better**, for example , an MAE of 0 that is better than an MAE of 100.\n",
+        "\n",
+        "The main thing we're evaluating here is : **how do our model's forecast(y_pred) compare against the actual values(y_true or ground truth values) ?**\n",
+        "\n",
+        "\n",
+        "> **Resources** For a deeper dive on the various kinds of time series forecasting methods, see, please refer to 5.8 on the book https://otexts.com/fpp3/accuracy.html#accuracy"
       ]
     },
     {
@@ -1187,9 +1195,74 @@
         "id": "n8fVqrQjhym7"
       },
       "source": [
+        "import tensorflow as tf\n"
+      ],
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kIlDYE8Glglf"
+      },
+      "source": [
+        "# MASE implementation \n",
+        "def mean_absolute_scaled_error(y_true, y_pred) :\n",
+        "  \"\"\"\n",
+        "  Implement MASE (assuming no seasonality of data).\n",
+        "  \"\"\"\n",
+        "  # For future forecast experiments, \n",
+        "  #if the function mean_absolute_scaled_error returns > 1 , means its worse than Naive forecast\n",
+        "  # if < 1, means its better than 1.\n",
+        "  mae = tf.reduce_mean(tf.abs(y_true-y_pred))\n",
+        "\n",
+        "  # Find MAE of naive forecast(no seasonality)\n",
+        "  mae_naive_no_season = tf.reduce_mean(tf.abs(y_true[1:] - y_true[:-1])) # our seasonlity is 1 day (hence the shift of 1)\n",
+        "\n",
+        "  return mae / mae_naive_no_season"
+      ],
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "etrtsdW7pxSh",
+        "outputId": "b885f2a0-12a0-4318-e2b6-568367d6d2f4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Evaluating our naive forecast baseline, it should return 1\n",
+        "mean_absolute_scaled_error(y_true = y_test[1:],\n",
+        "                           y_pred = naive_forecast).numpy()"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9995699939182624"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "erZXSRybqKwa"
+      },
+      "source": [
         ""
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     }
   ]
