#303 Creating evaluation function and running for naive model

--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -1227,11 +1227,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "etrtsdW7pxSh",
-        "outputId": "b885f2a0-12a0-4318-e2b6-568367d6d2f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "etrtsdW7pxSh",
+        "outputId": "b885f2a0-12a0-4318-e2b6-568367d6d2f4"
       },
       "source": [
         "# Evaluating our naive forecast baseline, it should return 1\n",
@@ -1255,9 +1255,185 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "erZXSRybqKwa"
+      },
+      "source": [
+        "## Create Evaluation metrics"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1gFu0_oKqmt9"
+      },
+      "source": [
+        "# Create a function to take in model predictions and truth value and return eveluation metrics\n",
+        "\n",
+        "def evaluate_preds(y_true, y_pred) :\n",
+        "  \"\"\"\n",
+        "  Compute all evaluation metrics\n",
+        "  Returns :\n",
+        "  dictionary with all evaluation metrics values\n",
+        "  \"\"\"\n",
+        "  # Make sure float32 datatype (for metric calculations)\n",
+        "  y_true = tf.cast(y_true, dtype=tf.float32)\n",
+        "  y_pred = tf.cast(y_pred, tf.float32)\n",
+        "\n",
+        "  # Calculate various evaluation metrics\n",
+        "  mae = tf.keras.metrics.mean_absolute_error(y_true, y_pred)\n",
+        "  mse = tf.keras.metrics.mean_squared_error(y_true, y_pred)\n",
+        "  rmse = tf.sqrt(mse)\n",
+        "  mape = tf.keras.metrics.mean_absolute_percentage_error(y_true, y_pred)\n",
+        "  mase = mean_absolute_scaled_error(y_true, y_pred)\n",
+        "\n",
+        "  return {\n",
+        "      \"mae\" : mae.numpy(),\n",
+        "      \"mse\": mse.numpy(),\n",
+        "      \"rmse\" : rmse.numpy(),\n",
+        "      \"mape\" : mape.numpy(),\n",
+        "      \"mase\": mase.numpy()}"
+      ],
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Rc7MVA-tt7ZH"
+      },
+      "source": [
+        "That's one good looking evaluation function !\n",
+        "Let's now see if it works..."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rNkbEZfOsN1y",
+        "outputId": "42cb6cb7-8cea-4592-acfb-43332351abf1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Evaluate Naive forecast (baseline)\n",
+        "naive_results = evaluate_preds(y_true = y_test[1:], \n",
+        "                               y_pred = naive_forecast)\n",
+        "naive_results"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'mae': 567.9802,\n",
+              " 'mape': 2.516525,\n",
+              " 'mase': 0.99957,\n",
+              " 'mse': 1147547.0,\n",
+              " 'rmse': 1071.2362}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NORcn3X3uK4u",
+        "outputId": "2d2df4d8-c300-46b5-ffe9-0d9f0c0ab4ff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "naive_forecast[-10:]"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([57107.12067189, 58788.20967893, 58102.19142623, 55715.54665129,\n",
+              "       56573.5554719 , 52147.82118698, 49764.1320816 , 50032.69313676,\n",
+              "       47885.62525472, 45604.61575361])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q7vOeSsK1iCu",
+        "outputId": "ede60609-5e34-40b1-965d-28240aa6b195",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "tf.reduce_mean(y_test)"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(), dtype=float64, numpy=20056.632963737226>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qm8uejEu1kxA",
+        "outputId": "fea32cc7-ad14-4db3-e411-97eed55d57a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "tf.reduce_min(y_test), tf.reduce_max(y_test)"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<tf.Tensor: shape=(), dtype=float64, numpy=4944.7023359837>,\n",
+              " <tf.Tensor: shape=(), dtype=float64, numpy=63346.7890351052>)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uqYNePn91zSz"
       },
       "source": [
         ""
