304. Discussing other non-TensorFlow kinds of time series forecasting models

--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -1311,11 +1311,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rNkbEZfOsN1y",
-        "outputId": "42cb6cb7-8cea-4592-acfb-43332351abf1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rNkbEZfOsN1y",
+        "outputId": "42cb6cb7-8cea-4592-acfb-43332351abf1"
       },
       "source": [
         "# Evaluate Naive forecast (baseline)\n",
@@ -1346,11 +1346,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NORcn3X3uK4u",
-        "outputId": "2d2df4d8-c300-46b5-ffe9-0d9f0c0ab4ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NORcn3X3uK4u",
+        "outputId": "2d2df4d8-c300-46b5-ffe9-0d9f0c0ab4ff"
       },
       "source": [
         "naive_forecast[-10:]"
@@ -1376,11 +1376,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "q7vOeSsK1iCu",
-        "outputId": "ede60609-5e34-40b1-965d-28240aa6b195",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "q7vOeSsK1iCu",
+        "outputId": "ede60609-5e34-40b1-965d-28240aa6b195"
       },
       "source": [
         "tf.reduce_mean(y_test)"
@@ -1404,11 +1404,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Qm8uejEu1kxA",
-        "outputId": "fea32cc7-ad14-4db3-e411-97eed55d57a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Qm8uejEu1kxA",
+        "outputId": "fea32cc7-ad14-4db3-e411-97eed55d57a3"
       },
       "source": [
         "tf.reduce_min(y_test), tf.reduce_max(y_test)"
@@ -1431,9 +1431,31 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "uqYNePn91zSz"
+      },
+      "source": [
+        "## Other models you can use for baselines and for actual forecasts\n",
+        "\n",
+        "In this notebook, we're focused on TensorFlow and deep learning models.\n",
+        "However, there are plenty of time series that you could get a learning on \n",
+        "\n",
+        "https://dev.mrdbourke.com/tensorflow-deep-learning/10_time_series_forecasting_in_tensorflow/#Other-kinds-of-time-series-forecasting-models-which-can-be-used-for-baselines-and-actual-forecasts\n",
+        "\n",
+        "\n",
+        "\n",
+        "Check out the ones by Facebook, LinkedIn\n",
+        "\n",
+        "* https://github.com/facebookresearch/Kats\n",
+        "* https://github.com/linkedin/greykite\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z89JDODA8I5Z"
       },
       "source": [
         ""
