305. Formatting data Part 2: Creating a function to label our windowed time series

--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -1453,15 +1453,182 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "Z89JDODA8I5Z"
       },
       "source": [
-        ""
+        "# Format Data Part 2: Windowing our dataset\n",
+        "\n",
+        "Why do we window?\n",
+        "We window our timeseries dataset to turn our data into a supervised learning problem.\n",
+        "\n",
+        "```\n",
+        "Windowing for one week\n",
+        "[0, 1, 2, 3, 4, 5, 6] -> [7]\n",
+        "[1, 2, 3, 4, 5, 6, 7] -> [8]\n",
+        "[2, 3, 4, 5, 6, 7, 8] -> [9]\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MZFTcYwQ83gV",
+        "outputId": "15a207bd-ec35-4d0c-b368-df5c8d339c9b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "btc_price[:8]"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[123.65499,\n",
+              " 125.455,\n",
+              " 108.58483,\n",
+              " 118.67466,\n",
+              " 121.33866,\n",
+              " 120.65533,\n",
+              " 121.795,\n",
+              " 123.033]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5Se3vRVX8_6m",
+        "outputId": "2924d0d4-0412-4b36-8037-bd6bdfe78dd0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# What we want to do with our Bitcoin data\n",
+        "print(f\"We want to use: {btc_price[:7]} to predict this : {btc_price[7]}\")"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "We want to use: [123.65499, 125.455, 108.58483, 118.67466, 121.33866, 120.65533, 121.795] to predict this : 123.033\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GaG_Yugx9cAY"
+      },
+      "source": [
+        "# Let's setup global variables for window and horizon size\n",
+        "\n",
+        "HORIZON = 1 # predict next 1 day\n",
+        "WINDOW_SIZE = 7 # use the past week of Bitcoin data to make predictions"
+      ],
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bRj4DdSz-0tJ"
+      },
+      "source": [
+        "[[window_1],\n",
+        " [window_2],\n",
+        " [window_3]\n",
+        " ]"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eTDqZa3D9l0u"
+      },
+      "source": [
+        "# Create function to label windowed data\n",
+        "\n",
+        "def get_labelled_window(x, horizon = HORIZON) :\n",
+        "  \"\"\"\n",
+        "  Create labels for windowed dataset.\n",
+        "   E.g. if horizon =1\n",
+        "   Input: [0, 1, 2, 3, 4, 5, 6, 7] -> Output: ([0, 1, 2, 3, 4, 5, 6], [7]) \n",
+        "  \"\"\"\n",
+        "  return x[:, :-horizon], x[:, -horizon: ]"
+      ],
+      "execution_count": 61,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e8I9ktQp_pGI",
+        "outputId": "43d7c1b3-626f-4ea6-ac9b-8891a2fbcb25",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Test out the window labelling function\n",
+        "test_window , test_label = get_labelled_window(tf.expand_dims(tf.range(8), axis=0))\n",
+        "print(f\"Window : {tf.squeeze(test_window).numpy()} -> Label : {tf.squeeze(test_label).numpy()} \")"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Window : [0 1 2 3 4 5 6] -> Label : 7 \n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iERZe1UBAFNp",
+        "outputId": "81091712-79ca-45c7-e997-505403c4bf2e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "tf.expand_dims(tf.range(8), axis=0)"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(1, 8), dtype=int32, numpy=array([[0, 1, 2, 3, 4, 5, 6, 7]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 64
+        }
+      ]
     }
   ]
 }
