--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -1474,11 +1474,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MZFTcYwQ83gV",
-        "outputId": "15a207bd-ec35-4d0c-b368-df5c8d339c9b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MZFTcYwQ83gV",
+        "outputId": "15a207bd-ec35-4d0c-b368-df5c8d339c9b"
       },
       "source": [
         "btc_price[:8]"
@@ -1509,11 +1509,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5Se3vRVX8_6m",
-        "outputId": "2924d0d4-0412-4b36-8037-bd6bdfe78dd0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5Se3vRVX8_6m",
+        "outputId": "2924d0d4-0412-4b36-8037-bd6bdfe78dd0"
       },
       "source": [
         "# What we want to do with our Bitcoin data\n",
@@ -1580,11 +1580,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "e8I9ktQp_pGI",
-        "outputId": "43d7c1b3-626f-4ea6-ac9b-8891a2fbcb25",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "e8I9ktQp_pGI",
+        "outputId": "43d7c1b3-626f-4ea6-ac9b-8891a2fbcb25"
       },
       "source": [
         "# Test out the window labelling function\n",
@@ -1605,11 +1605,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iERZe1UBAFNp",
-        "outputId": "81091712-79ca-45c7-e997-505403c4bf2e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iERZe1UBAFNp",
+        "outputId": "81091712-79ca-45c7-e997-505403c4bf2e"
       },
       "source": [
         "tf.expand_dims(tf.range(8), axis=0)"
@@ -1629,6 +1629,39 @@
           "execution_count": 64
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tq_I4DZ5BMmO"
+      },
+      "source": [
+        "## Windows and Horizons\n",
+        "\n",
+        "Prepare the data using the sliding window approach."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u2Xd8PNJJiTP"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7xJDPAcqH4kt"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
